--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
             <p>Organ Pipe Cactus (AZ): 13 Missions</p>
             <p>Golden Gate (CA): 10 Missions</p>
             <p>Grand Canyon (AZ): 9 Missions</p>
-            <img class="fatality-us-image" src="C:\Users\danas\Documents\School\Earth Systems R\data\us_fatality" alt="Fatality Comparison Mission Map">
+            <img class="fatality-us-image" src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\us_fatality" alt="Fatality Comparison Mission Map">
         </div>
         <div class="card">
             <h2>Top Three National Parks with Most Unfound People</h2>
             <p>Glacier Bay (AK) : 17 </p>
             <p>Grand Teton (WY) : 14 </p>
             <p>Pinnacles (CA): 8 </p>
-            <img src="C:\Users\danas\Documents\School\Earth Systems R\data\us_unfound" alt="Unfound People US Map">
+            <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\us_unfound" alt="Unfound People US Map">
         </div>
     </div>
 </body>
