--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <p>Utah: 411 Missions</p>
             <p>Arizona: 356 Missions</p>
             <div class="image-container">
-                <img src="C:\Users\danas\Documents\School\Earth Systems R\data\ca_park_mission" alt="California Park Mission Graph">
-                <img src="C:\Users\danas\Documents\School\Earth Systems R\data\ut_park_mission" alt="Utah Park Mission Graph">
-                <img src="C:\Users\danas\Documents\School\Earth Systems R\data\az_park_mission" alt="Arizona Park Mission Graph">
+                <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\ca_park_mission" alt="California Park Mission Graph">
+                <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\ut_park_mission" alt="Utah Park Mission Graph">
+                <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\az_park_mission" alt="Arizona Park Mission Graph">
             </div>
         </div>
         <div class="card">
@@ -91,9 +91,9 @@
             <p>California: 20 Missions</p>
             <p>Washington: 12 Missions</p>
             <div class="image-container">
-                <img src="C:\Users\danas\Documents\School\Earth Systems R\data\ca_park_fatality" alt="California Park Fatality Graph">
-                <img src="C:\Users\danas\Documents\School\Earth Systems R\data\ut_park_fatalit" alt="Utah Park Fatality Graph">
-                <img src="C:\Users\danas\Documents\School\Earth Systems R\data\az_park_fatality" alt="Arizona Park Fatality Graph">
+                <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\ca_park_fatality" alt="California Park Fatality Graph">
+                <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\ut_park_fatalit" alt="Utah Park Fatality Graph">
+                <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\az_park_fatality" alt="Arizona Park Fatality Graph">
             </div>
         </div>
         <div class="card">
