updated image usage

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <p>Utah: 411 Missions</p>
             <p>Arizona: 356 Missions</p>
             <div class="image-container">
-                <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\ca_park_mission" alt="California Park Mission Graph">
-                <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\ut_park_mission" alt="Utah Park Mission Graph">
-                <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\az_park_mission" alt="Arizona Park Mission Graph">
+                <img src="Images\ca_park_mission" alt="California Park Mission Graph">
+                <img src="Images\ut_park_mission" alt="Utah Park Mission Graph">
+                <img src="Images\az_park_mission" alt="Arizona Park Mission Graph">
             </div>
         </div>
         <div class="card">
@@ -91,9 +91,9 @@
             <p>California: 20 Missions</p>
             <p>Washington: 12 Missions</p>
             <div class="image-container">
-                <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\ca_park_fatality" alt="California Park Fatality Graph">
-                <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\ut_park_fatalit" alt="Utah Park Fatality Graph">
-                <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\az_park_fatality" alt="Arizona Park Fatality Graph">
+                <img src="Images\ca_park_fatality" alt="California Park Fatality Graph">
+                <img src="Images\ut_park_fatalit" alt="Utah Park Fatality Graph">
+                <img src="Images\az_park_fatality" alt="Arizona Park Fatality Graph">
             </div>
         </div>
         <div class="card">
@@ -101,14 +101,14 @@
             <p>Organ Pipe Cactus (AZ): 13 Missions</p>
             <p>Golden Gate (CA): 10 Missions</p>
             <p>Grand Canyon (AZ): 9 Missions</p>
-            <img class="fatality-us-image" src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\us_fatality" alt="Fatality Comparison Mission Map">
+            <img class="fatality-us-image" src="Images\us_fatality" alt="Fatality Comparison Mission Map">
         </div>
         <div class="card">
             <h2>Top Three National Parks with Most Unfound People</h2>
             <p>Glacier Bay (AK) : 17 </p>
             <p>Grand Teton (WY) : 14 </p>
             <p>Pinnacles (CA): 8 </p>
-            <img src="C:\Users\danas\Documents\School\Earth Systems R\Lab2\EarthR2\us_unfound" alt="Unfound People US Map">
+            <img src="Images\us_unfound" alt="Unfound People US Map">
         </div>
     </div>
 </body>
